# OpenRA

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .itch.toml  .kateproject  .mailmap  .swp  .travis.yml  AUTHORS  AUTHORS.AS  BASE.tsx  BAT.tsx  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  C_O_C.md  ConvertFrom-Markdown.ps1  Directory.Build.props  Dockerfile  GeoLite2-Country.mmdb  HACKING  HELP  INSTALL  INSTALL.Ubuntu  INSTALL.md  LICENSE  Makefile  OpenRA.Editor.vshost.exe.manifest  OpenRA.Game.exe.config  OpenRA.Mods.AS.csproj  OpenRA.Mods.AS.csproj.orig  OpenRA.Platforms.Default.config  OpenRA.Platforms.Default.dll.config  OpenRA.StyleCheck.exe.config  OpenRA.Test.nunit  (+113 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.itch/: isolate-app.profile
Activities/: ChronoResourceTeleport.cs  FallDown.cs  HeliFlyCircleTimed.cs
BluntDx/: AssemblyInfo.cpp  BluntDx.vcproj  Direct3D.cpp  DirectInput.cpp  Effect.h  Enumerations.h  FontHelper.h  GraphicsDevice.h  ImageInformation.h  InputDevice.h  InputManager.h  JoystickState.h  KeyboardState.h  Mesh.h  MouseState.h  SpriteHelper.h  Texture.h  Utilities.h  VertexBuffer.h
Effects/: AirstrikePowerASEffect.cs  InstantExplode.cs  SimpleAnim.cs  SmokeParticle.cs
FileExtractor/: FileExtractor.cs  FileExtractor.csproj  Main.cs
GeoIP/: Country.cs  DatabaseInfo.cs  GeoIP.csproj  Location.cs  LookupService.cs  Region.cs  RegionName.cs
ImageDecode/: Format40.cs  Format80.cs  ImageDecode.csproj  Palette.cs  Program.cs  ShpReader.cs
Lint/: CheckSpawnActorWarheads.cs  CheckTargetHealthRadiusAS.cs
LuaInterface/: AssemblyInfo.cs  CheckType.cs  GenerateEventAssembly.cs  Lua.cs  LuaBase.cs  LuaDLL.cs  LuaException.cs  LuaFunction.cs  LuaGlobalAttribute.cs  LuaHideAttribute.cs  LuaInterface.csproj  LuaRegistrationHelper.cs  LuaScriptException.cs  LuaTable.cs  LuaUserData.cs  Metatables.cs  MethodWrapper.cs  ObjectTranslator.cs  ProxyType.cs
MapConverter/: AssemblyInfo.cs  IniMap.cs  Main.cs  MapConverter.cs  MapConverter.csproj
MapViewer/: IniFile.cs  MapViewer.csproj  Program.cs
MixBrowser/: Blowfish.cs  MixBrowser.csproj  MixEntry.cs  MixFile.cs  Program.cs
MixDecrypt/: MixDecrypt.cpp  MixDecrypt.h  MixDecrypt.vcproj  mix_decode.h
OpenRA.CrashDialog/: OpenRA.CrashDialog.csproj  Program.cs
OpenRA.Editor/: ActorPropertiesDialog.Designer.cs  ActorPropertiesDialog.cs  ActorTemplate.cs  ActorTool.cs  BrushTool.cs  ErrorListDialog.Designer.cs  ErrorListDialog.cs  Form1.Designer.cs  Form1.cs  Form1.resx  ITool.cs  LegacyMapImporter.cs  MapSelect.Designer.cs  MapSelect.cs  MapSelect.resx  NewMapDialog.Designer.cs  NewMapDialog.cs  OpenRA.Editor.csproj  PaletteBox.Designer.cs  PaletteBox.cs  Program.cs  PropertiesDialog.Designer.cs  PropertiesDialog.cs  RenderUtils.cs  ResizeDialog.Designer.cs  ResizeDialog.cs  ResourceTool.cs  Surface.cs  TileSetRenderer.cs  WaypointTool.cs
OpenRA.Extension.DS/: OpenRA.Extension.DS.csproj
OpenRA.FileFormats/: AudLoader.cs  BlowfishKeyProvider.cs  Cache.cs  ColorHSLR.cs  ColorRamp.cs  CompressedPackage.cs  ConnectedComponents.cs  Evaluator.cs  Exts.cs  FieldLoader.cs  FieldSaver.cs  FileSystem.cs  Folder.cs  Format80.cs  HSLColor.cs  Hotkey.cs  HttpUtil.cs  IPaletteRemap.cs  IniFile.cs  InstallUtils.cs  Keycode.cs  Manifest.cs  Map.cs  MiniYaml.cs  Mod.cs  NewMap.cs  OpenRA.FileFormats.csproj  Package.cs  PackageEntry.cs  Palette.cs  Platform.cs  PlayerColorRemap.cs  PriorityQueue.cs  ProtocolVersion.cs  Session.cs  Settings.StyleCop  ShroudPaletteRemap.cs  SingleColorRemap.cs  StreamExts.cs  Terrain.cs  (+14 more)
OpenRA.Game/: Actor.cs  ActorExts.cs  ActorInitializer.cs  ActorMap.cs  ActorReference.cs  App.config  CPos.cs  CVec.cs  CacheStorage.cs  Chat.cs  ChatLabels.cs  Chrome.cs  Combat.cs  ContentInstaller.cs  Controller.cs  CountVariableState.cs  CryptoUtil.cs  Cursor.cs  DangerZone.cs  DefaultPlayer.cs  DomainIndex.cs  Download.cs  ExternalModSwitcher.cs  ExternalMods.cs  Exts.cs  FieldLoader.cs  FieldSaver.cs  FluentBundle.cs  FluentExts.cs  FluentProvider.cs  FontManager.cs  Fonts.cs  FootprintUtils.cs  Game.cs  GameInformation.cs  GameSpeed.cs  GlobalChat.cs  GlobalMissionData.cs  GrantedVariableReference.cs  Group.cs  (+83 more)
OpenRA.GameMonitor/: GameMonitor.cs  OpenRA.GameMonitor.csproj
OpenRA.Gl/: GraphicsDevice.cs  IndexBuffer.cs  OpenRA.Gl.csproj  Shader.cs  Texture.cs  VertexBuffer.cs
OpenRA.Irc/: Channel.cs  IrcClient.cs  IrcClientUser.cs  IrcConnection.cs  IrcUtils.cs  Line.cs  NumericCommand.cs  OpenRA.Irc.csproj  Topic.cs  User.cs
OpenRA.Launcher/: App.config  ConfigureModsDialog.Designer.cs  ConfigureModsDialog.cs  Download.cs  InstallPackagesDialog.Designer.cs  InstallPackagesDialog.cs  InstallPackagesDialog.resx  JSBridge.cs  Launcher.Designer.cs  Launcher.cs  Launcher.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Mod.cs  OpenRA.Launcher.csproj  Program.cs  Util.cs  UtilityProgram.cs
OpenRA.Launcher.Gtk/: bridge.c  bridge.h  bridge.js  main.c  main.h  server.c  server.h  utility.c  utility.h
OpenRA.Launcher.Mac/: Controller.h  Controller.m  Download.h  Download.m  GameInstall.h  GameInstall.m  HttpRequest.h  HttpRequest.m  ImageAndTextCell.h  ImageAndTextCell.m  JSBridge.h  JSBridge.m  Mod.h  Mod.m  ModEntry.h  ModEntry.m  OpenRA  OpenRA-Info.plist  OpenRA.icns  OpenRAAppDelegate.h  OpenRAAppDelegate.m  OpenRA_Prefix.pch  README  SidebarEntry.h  SidebarEntry.m  main.h  main.m
OpenRA.Lint/: OpenRA.Lint.csproj  YamlChecker.cs
OpenRA.Markup/: Exts.cs  MiniYaml.cs  OpenRA.Markup.csproj
OpenRA.Mods.AS/: OpenRA.Mods.AS.csproj  README.md  TraitsInterfaces.cs
OpenRA.Mods.Aftermath/: ChronoshiftDeploy.cs  DemoTruck.cs  OpenRA.Mods.Aftermath.csproj
OpenRA.Mods.Cnc/: AirstrikePower.cs  AttackPopupTurreted.cs  CarpetBomb.cs  Cloak.cs  CncColorPickerPaletteModifier.cs  CncLoadScreen.cs  CncMenuPaletteEffect.cs  CncWaterPaletteRotation.cs  CriticalBuildingState.cs  DeadBuildingState.cs  ImportTiberianDawnLegacyMapCommand.cs  (+18 more)
(+12408 files in other folders)
